Fix alignment for dl buttons

--- a/assets/css/_header.styl
+++ b/assets/css/_header.styl
@@ -43,7 +43,7 @@
 .os-download
   width: 191px
   float: right
-  margin-right: 36px
+  margin-right: 14px
   li
     display: inline-block
     color: #c0c0c0
